--- a/src/Components/Join/Join.css
+++ b/src/Components/Join/Join.css
@@ -59,3 +59,20 @@
 .btn-j:hover {
   scale: 1.1;
 }
+@media screen and (max-width: 768px) {
+  .Join {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .left-j {
+    font-size: x-large;
+    flex-direction: column;
+  }
+  .right-j {
+    padding: 2rem;
+  }
+  .email-container {
+    justify-content: center;
+    padding: 0%;
+  }
+}
